Add image to meta data index.html

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,9 +4,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&family=Poiret+One&display=swap" rel="stylesheet">
-    
-
-
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -15,6 +12,11 @@
       name="enCapsule"
       content="Digitize your wardrobe with enCapsule"
     />
+    <meta name="description" content="enCapsule app" />
+    <meta name="title" property="og:title" content="enCapsule" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://i.imgur.com/YJoGDel.png" />
+    <meta name="description" property="og:description" content="enCapsule app" />
     <link rel="icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
